--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ phper = "0.10.2"
 hyper = { version = "0.14", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
 pretty_env_logger = "0.4"
+thiserror = "1.0.38"
 
 [lib]
 crate-type = ["lib", "cdylib"]
